# wasm-evm-chain

./: Cargo.toml  README.md  custom.json  genesis.json  prova.hbs
.github/workflows/: frontier-rpc-tests.yaml  update-badge.yml
chain-extensions/pallet-assets/: Cargo.toml
chain-extensions/pallet-assets/src/: tests.rs
node/: Cargo.toml
node/src/: benchmarking.rs  cli.rs  command.rs  lib.rs
node/src/local/: chain_spec.rs  service.rs
pallets/inflation/src/: benchmarking.rs  lib.rs
pallets/unified-accounts/src/: migration.rs
pallets/uomi-engine/: Cargo.toml
pallets/uomi-engine/src/: lib.rs  mock.rs  test.wasm  tests.rs  weights.rs
precompiles/utils/: Cargo.toml
precompiles/utils/tests-external/: lib.rs
primitives/: Cargo.toml
primitives/src/: benchmarks.rs  inflation.rs  lib.rs
runtime/: Cargo.toml  build.rs
runtime/local/: Cargo.toml
runtime/local/src/: lib.rs  precompiles.rs
runtime/src/: lib.rs  precompiles.rs
runtime/src/weights/: pallet_balances.rs
tests/integration/: Cargo.toml
